Validation error "exception during validate" should display exception text

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 3.5.7
    • Affects Version/s: 2.0.7, 2.2.0
    • Component/s: Usability
    • None
    • Fully Compatible
    • ALL
    • TIG 2017-05-08, TIG 2017-05-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If a collection fails validation by the db.collectionName.validate() command and does so by throwing an assertion exception, the error "exception during validate" is returned in the "errors" array. This text should include the text of the assertion so that the user knows what the exception was without having to look in the log file.

            Assignee:
            Robert Guo (Inactive)
            Reporter:
            Tad Marshall
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: