SERVER-7325 print message of certain mmapv1 validate() errors